May 8 2024
Added:
 dialogue.rs

 CampusSquare struct

 CAMPUSSQUAREMAP

 third_scene()

Changed:
 print_dialogue() to get_dialogue()
 it now calls print_dialogue() in dialogue.rs
-----------------------------------------------------------------------------------------
May 7 2024
Added:
 npcs.rs

 BasicNPC struct

 DormOffice struct

 npc_interaction.rs

 print_dialogue()

 get_npc_index()
-----------------------------------------------------------------------------------------
May 6 2024
Added:
 DormRoom struct
 
 SchoolDorms struct

 DORMMAP interactable

 Hallway is now creates 4 different hallways
 hallway_e1 hallway_e2 hallway_w1 hallway_w2
-----------------------------------------------------------------------------------------
May 5 2024
Added:
 pickup item now prints some text

 Changed:
 printing now has a blank space between 
 the different blocks of text
-----------------------------------------------------------------------------------------
May 4 2024
Added:
 second_scene() to play_game()

 some flavor to how the text looks
 with colored

 start_up_scene()

 Removed:
 choose_hair_color
 choose_eye_color
-----------------------------------------------------------------------------------------
May 3 2024
Added:
 the hallway area

 print_search()
 gives the description of the area
 
 second_check() returns true if the 
 conditions for the the second scene have occurred

 all_scenes() 
 holds bool values that indicate if a scene has occurred
 scene_complete()
 updates all_scenes() when a scene has occurred

Changed:
 first_room.rs to all_rooms.rs

 first_scene.rs to all_scenes.rs

Moved:
 default_state() to GameState as a method

Removed:
 new_game.rs
-----------------------------------------------------------------------------------------
May 2 2024
Added:
 a counter to Room

 add_entered() to GameState
 plus 1 when player enters a room
-----------------------------------------------------------------------------------------
May 1 2024(2)
Added: