@@ -1,3 +1,11 @@
+May 9 2024
+Added:
+ more flavor text to search text
+
+ SchoolAuditorium struct
+Changed:
+ formating of the search text
+-----------------------------------------------------------------------------------------
 May 8 2024
 Added:
  dialogue.rs
